# bayan-manim-video-generator

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTEXT.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  README.md  SECURITY.md  SUPPORT.md  main.py  pyproject.toml
.agents/skills/manim-video/: README.md  SKILL.md
.agents/skills/manim-video/references/: animation-design-thinking.md  animations.md  camera-and-3d.md  graphs-and-data.md  production-quality.md  rendering.md  scene-planning.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  task.yml
.github/workflows/: ai-code-review.yml  ci.yml
bayan/: __main__.py  cli.py
bayan/generator/: llm_client.py
bayan/renderer/: __init__.py  docker.py  errors.py  executor.py  models.py  process.py  security.py  smoke.py
bayan/utils/: arabic_helper.py  sanity_check.py
container/: pyproject.toml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  DOMAIN_MODEL.md  PROJECT_NORTH_STAR.md
docs/agdr/: AgDR-0001-type-checker.md  AgDR-0002-render-isolation.md
docs/research/: manim-agent-landscape.md
scripts/: check_python_comments.py  container_smoke.py
skills/creative/manim-video/references/: decorations.md  equations.md  index.md  mobjects.md  no-latex-workaround.md  paper-explainer.md  production-checklists.md  troubleshooting.md  updaters-and-trackers.md  visual-design.md
templates/: boolean_operations_template.py  dancing_circles_template.py  dynamic_rectangle_area.py  electric_field.py  equation_moving_template.py  grid_transform_template.py  moving_angle.py  multi_pendulum_template.py  sine_curve_template.py
tests/: test_arabic_helper.py  test_cli.py  test_container_smoke.py  test_executor.py  test_llm_client.py  test_python_comments.py  test_smoke.py
tests/skills/: test_manim_video_skill.py
