[project]
name = "bayan"
version = "0.1.0"
description = "Bayan: Arabic AI-Powered Manim Video Generator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "manim>=0.20.0",
    "typer>=0.9.0",
    "arabic-reshaper>=3.0.1",
    "python-bidi>=0.4.2",
    "openai>=1.0.0",
    "pytest>=9.1.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.2.0",
    "setuptools<81",
]

[project.scripts]
bayan = "bayan.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["bayan*"]